--- a/.gitignore
+++ b/.gitignore
@@ -304,4 +304,8 @@ cython_debug/
 
 # End of https://www.toptal.com/developers/gitignore/api/python,visualstudiocode,pycharm
 
+# SEALchan P.S.' Temp File When Coding
 temp/
+
+# Running File
+base_info_offset.txt
