--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -18,6 +18,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install pylint
-    - name: Analysing the code with pylint
+        pip install -r requirements.txt
+    - name: Analyzing the code with pylint
       run: |
         pylint $(git ls-files '*.py')
